.provarCaches/00D410000011HE0EAM/objects/rstk__povend__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__povend_unapplcrhomeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Credit Amount (Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__povend_unappldrhomeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Debit Amount (Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Vendor Master</label>
    <listViews>
        <fullName>Currency_Vendors</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_vendno__c</columns>
        <columns>rstk__povend_maintcurrind__c</columns>
        <columns>rstkf__povend_dfltcmpno__c</columns>
        <columns>rstk__povend_vendcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__povend_fsvendid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__povend_maintcurrind__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>rstk__povend_vendcurr__c</field>
            <operation>notContain</operation>
            <value>USD</value>
        </filters>
        <label>Currency Vendors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Vendor_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_povclass__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Vendor Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VAT_Vendors</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_vendno__c</columns>
        <columns>rstk__povend_maintcurrind__c</columns>
        <columns>rstk__povend_vendcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__povend_fsvendid__c</columns>
        <columns>rstk__povend_vatclass__c</columns>
        <columns>rstkf__povend_glexpenseacct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__povend_vatclass__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>VAT Override Vendors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor_Master_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_vendcurr__c</columns>
        <columns>rstk__povend_vendno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SB-24808 (1103)</value>
        </filters>
        <label>Vendor Master - Filtered</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Vendor_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_vendno__c</columns>
        <columns>rstk__povend_dimval__c</columns>
        <columns>rstk__povend_sf_account__c</columns>
        <columns>rstk__povend_sf_account_name__c</columns>
        <columns>rstkf__povend_cctype__c</columns>
        <columns>rstk__povend_terms__c</columns>
        <columns>rstk__povend_vendcurr__c</columns>
        <columns>rstkf__povend_dfltcmpno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__povend_maintcurrind__c</columns>
        <columns>rstk__povend_dirmtlind__c</columns>
        <columns>rstk__povend_serviceind__c</columns>
        <columns>rstk__povend_indmtlind__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Vendor_Master1</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_vendno__c</columns>
        <columns>rstk__povend_dimval__c</columns>
        <columns>rstk__povend_sf_account__c</columns>
        <columns>rstk__povend_onetimeind__c</columns>
        <columns>rstk__povend_fsvendid__c</columns>
        <columns>rstk__povend_altfsvendid__c</columns>
        <columns>rstk__povend_maintcurrind__c</columns>
        <columns>rstk__povend_vendcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__povend_dirmtlind__c</columns>
        <columns>rstk__povend_serviceind__c</columns>
        <columns>rstk__povend_indmtlind__c</columns>
        <columns>rstk__povend_terms__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__povend_usrno__c</field>
            <operation>contains</operation>
            <value>S</value>
        </filters>
        <label>Vendor Master1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Vendor_Master_ALL</fullName>
        <columns>NAME</columns>
        <columns>rstk__povend_vendno__c</columns>
        <columns>rstk__povend_dimval__c</columns>
        <columns>rstk__povend_sf_account__c</columns>
        <columns>rstk__povend_onetimeind__c</columns>
        <columns>rstk__povend_vendcurr__c</columns>
        <columns>rstk__povend_fsvendid__c</columns>
        <columns>rstk__povend_altfsvendid__c</columns>
        <columns>rstk__povend_maintcurrind__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__povend_dirmtlind__c</columns>
        <columns>rstk__povend_serviceind__c</columns>
        <columns>rstk__povend_indmtlind__c</columns>
        <columns>rstk__povend_terms__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Master ALL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_RespBuyer</fullName>
        <active>true</active>
        <description>validation Resp Buyer</description>
        <errorConditionFormula>And(NOT(ISBLANK(rstk__povend_buyusrno__c)), NOT(rstk__povend_buyusrno__r.rstk__syusr_respbuyerind__c))</errorConditionFormula>
        <errorMessage>The Resp Buyer is not Responsible Buyer</errorMessage>
    </validationRules>
</CustomObject>